tests/baselines/reference/scannerNumericLiteral2.errors.txt
scannerNumericLiteral2.ts(1,1): error TS1121: Octal literals are not allowed. Use the syntax '0o1'.


==== scannerNumericLiteral2.ts (1 errors) ====
    01
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o1'.